# tethys-uvx

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
conf/: portal_config.yml  portal_storage.py
scripts/: configure-services.sh  configure-tethysdash.sh  db-migrations.sh  init-tethys.sh  portal-bootstrap.sh  portal-config.sh  provision-persistent-store.sh  publish-static.sh  run-once.sh  start-server.sh  start-uvicorn.sh  wait-for-role.sh
